--- a/structure/templates/elements/menu/menu.html
+++ b/structure/templates/elements/menu/menu.html
@@ -1,6 +1,5 @@
 {# Menu Item Element #}
-<div class="item">
-  <div class="item__title">{{ element.settings.item }}:</div>
-  <div class="item__title">{{ element.title }}</div>
-  <div class="item__price">{{ element.settings.price }}</div>
-</div>
+<span class="menu-items ">
+  <div class="menu-item menu-item-description">{{ element.title }}</div>
+  <div class="menu-item menu-item-price">{{ element.settings.price }}</div>
+</span>
