--- a/structure/sass/default/elements/_contact.scss
+++ b/structure/sass/default/elements/_contact.scss
@@ -27,12 +27,19 @@
  /* Add styles to 'label' selector */
  label {
    font-size: 1.2em;
+   @include margin(1rem null null);
+  
  }
 
  /* Add styles to 'input' and 'textarea' selectors */
  input[type=text],
  input[type=email],
+ input[type=tel],
+ input[type=int],
+ input[type=date],
+ fieldset,
  textarea {
+   background-color: $bg-light;
    width: 100%;
    @include padding(.75em 1em);
    border       : 1px solid var(--clr-grey-medium);
@@ -40,6 +47,19 @@
    grid-column  : 2 / 3;
    font-size    : 1rem;
    transition   : all 125ms ease-in-out;
+ }
+ input[type=date]{
+   font-size: .9rem;
+   font-family: $ff-sans;
+   letter-spacing: $ls;
+ }
+fieldset {
+  .title  {
+    font-size: 1.2rem;
+    background: $bg-grey;
+    @include padding(null .5rem);
+  }
+ 
  }
 
  /* Add styles to show 'focus' of selector */
