--- a/structure/sass/default/includes/_svg.scss
+++ b/structure/sass/default/includes/_svg.scss
@@ -4,12 +4,12 @@
   bottom  : 0;
   width: clamp(2rem, 10vw, 5rem);
 }
-.wooHooSVG {
+.footerSVG {
   position: fixed;
-  z-index: -1;
+  left: 0;
   bottom: 0;
-  right: .5em;
-  height: 20%;
+  height: clamp(9rem, 10vh, 20rem);
+  z-index: 1000;
 
 }
 
