--- a/structure/sass/default/vars/_typography.scss
+++ b/structure/sass/default/vars/_typography.scss
@@ -1,30 +1,97 @@
-  // Fonts
-  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=PT+Serif:wght@700&display=swap');
+// Font family
+@import url("https://fonts.googleapis.com/css?family=Crimson+Text:400,700");
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
 
-    // typography
- 
-   // Precision responsive typography A PEN BY Mike
- 
-   // These values are the minimum and maximum viewport sizes to apply the font scaling
-   $min_width: 768;
-   $max_width: 991;
-   // These values represent the range of fon-tsize to apply
-   // These values effect the base font-size, headings and other elements will scale proportionally
-   $min_font: 14;
-   $max_font: 16;
- 
-   :root {
-     font-size: #{$min_font}px;
-   }
- 
-   @media (min-width: #{$min_width}px) and (max-width: #{$max_width}px) {
-     :root {
-       font-size: calc(#{$min_font}px + (#{$max_font} - #{$min_font}) * ((100vw - #{$min_width}px) / (#{$max_width} - #{$min_width})));
-     }
-   }
- 
-   @media (min-width: #{$max_width}px) {
-     :root {
-       font-size: #{$max_font}px;
-     }
-   }
+@font-face {
+  font-family: 'franchise_freebold';
+  src: url('../../fonts/franchise-free-bold-webfont.woff2') format('woff2'),
+    url('../../fonts/franchise-free-bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+// These values are the minimum and maximum viewport sizes to apply the font scaling
+$min_width: 576;
+$max_width: 992;
+// These values represent the range of fon-tsize to apply
+// These values effect the base font-size, headings and other elements will scale proportionally
+$min_font: 16;
+$max_font: 18;
+
+:root {
+  font-size: #{$min_font}px;
+}
+
+// This part is a little bit ugly, I will explain what is going on in a blog post soon.
+@media (min-width: #{$min_width}px) and (max-width: #{$max_width}px) {
+  :root {
+    font-size: calc(#{$min_font}px + (#{$max_font} - #{$min_font}) * ((100vw - #{$min_width}px) / (#{$max_width} - #{$min_width})));
+  }
+}
+
+@media (min-width: #{$max_width}px) {
+  :root {
+    font-size: #{$max_font}px;
+  }
+}
+
+//Base Typography
+
+html {
+  font-size: 1em;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  line-height: 1.45;
+  color: $clr-dark-text;
+}
+
+p {
+  margin-bottom: 1.2em;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "franchise_freebold", sans-serif;
+  color: $clr-dark-text;
+  font-weight: inherit;
+  line-height: 1.2;
+  letter-spacing: .1em;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 3em;
+}
+
+h2 {
+  font-size: 2.5em;
+}
+
+h3 {
+  font-size: 2em;
+}
+
+h4 {
+  font-size: 1.414em;
+}
+
+h5 {
+  font-size: 1em;
+}
+
+h6 {
+  font-size: .8em;
+}
+
+small,
+.font_small {
+  font-size: 0.707em;
+}
