--- a/structure/templates/elements/hero/hero.html
+++ b/structure/templates/elements/hero/hero.html
@@ -19,4 +19,6 @@
   <div class="hero__overlay" {% if element.settings.overlay %}
     style="background-color: rgba({{element.settings.overlayColor}},{{element.settings.overlay }}%)" {% endif %}>
   </div>
+
 </div>
+{{ include("includes/_menuWidget.html") }}
