fixed currentMenus.html template to work minor style changes in default.scss

--- a/public/assets/css/default/main.css
+++ b/public/assets/css/default/main.css
@@ -245,6 +245,10 @@ section:first-of-type {
   margin-top: 1rem;
 }
 
+main {
+  padding-bottom: 5rem;
+}
+
 .container {
   margin: auto;
   width: 100%;
