--- a/structure/sass/default/global/_defaults.scss
+++ b/structure/sass/default/global/_defaults.scss
@@ -93,7 +93,9 @@ section {
   }
 
 }
-
+main {
+  @include padding(null null 5rem null);
+}
 .container {
   @include margin(auto);
   width                : 100%;
