--- a/structure/sass/default/main.scss
+++ b/structure/sass/default/main.scss
@@ -1,6 +1,7 @@
+// Main Sass File
 @import 'vendor/vendor';
 @import 'vars/vars';
 @import 'global/global';
-@import 'elements/elements';
 @import 'includes/includes';
+@import 'elements/elements';
 @import 'pages/pages';
