--- a/structure/templates/includes/_navbar.html
+++ b/structure/templates/includes/_navbar.html
@@ -12,12 +12,11 @@
     <a href="menu.html">Menu</a>
     <a href="shop.html">Shop Now</a>
   </div> -->
-
-</header>
-
+<!-- Hamburger Toggle Checkbox. See _hamburger.scss for styles. -->
 <input type="checkbox" name="toggle" id="toggle" class="toggle">
 <label for="toggle" class="toggle-label"><span></span></label>
 
+<!-- Off canvas navbar. Styles located in _navbar.scss. -->
 <nav id="navbar" class="navbar">
 
       <ul class="nav">
@@ -49,5 +48,7 @@
 
         {% endfor %}
       </ul>
-      <img class="inelineSVG chicken1SVG" src="assets/img/svg/chicken1.svg" alt="">
+      <img class="inlineSVG navbarSVG" src="assets/img/svg/chicken1.svg" alt="">
 </nav>
+</header>
+
