--- a/structure/sass/default/vars/_theme.scss
+++ b/structure/sass/default/vars/_theme.scss
@@ -1,47 +1,30 @@
-  // Color Pallette
+$clr-black      : hsl(345, 6%, 13%);
+$clr-white      : hsl(0, 0%, 100%);
+$clr-blue-light : hsl(177, 44%, 65%);
+$clr-red        : hsl(11, 81%, 49%);
+$clr-green      : hsl(147, 80%, 26%);
+$clr-blue-dark  : hsl(235, 47%, 21%);
+$clr-orange     : hsl(14, 81%, 62%);
+$clr-pink       : hsl(334, 78%, 87%);
 
-  $clr-black      : hsl(345, 6%, 13%);
-  $clr-white      : hsl(0, 0%, 100%);
-  $clr-blue-light : hsl(177, 44%, 65%);
-  $clr-red        : hsl(11, 81%, 49%);
-  $clr-green      : hsl(147, 80%, 26%);
-  $clr-blue-dark  : hsl(235, 47%, 21%);
-  $clr-orange     : hsl(14, 81%, 62%);
-  $clr-pink       : hsl(334, 78%, 87%);
-
-  $clr-grey-light : rgb(240, 240, 240);
-  $clr-grey-medium: rgb(204, 204, 204);
-  $clr-grey-dark  : hsl(0, 0%, 30%);
-
-  // Theme -- DO NOT CHANGE VARIABLE NAMES. Update the  
-
-  $clr-primary      : $clr-blue-light;
-  $clr-primary-dark : darken($clr-primary, 10);
-  $clr-primary-light: lighten($clr-primary, 50);
-  $clr-secondary    : adjust-hue($clr-primary, -20);
-  $clr-accent       : $clr-red;
-  $clr-dark-text    : $clr-blue-dark;
-  $clr-light-text   : $clr-white;
+$clr-grey-light : rgb(240, 240, 240);
+$clr-grey-medium: rgb(204, 204, 204);
+$clr-grey-dark  : hsl(0, 0%, 30%);
 
 
-  // Default Element Styles 
-  $bg-light            : $clr-white;
-  $bg-dark: $clr-black;
-  $bg-grey       : $clr-grey-medium;
-  $bs            : 0 0 25px rgba($clr-black, .25);
-  $bs-1          : 0 10px 25px rgba($clr-black, .25);
-  $bs-2          : 0 20px 40px -15px rgba($clr-black, .25);
-  $bsh           : 0px 0px 10px 2px rgba($clr-black, .15); // box shadow hover
-  $br            : 7px;
-  $ls            : 2px;
-  $ts            : 0 2px 5px rgba($clr-black, .18);
-  $section-margin: 0rem;
+$clr-primary: $clr-blue-light;
+$clr-primary-light: lighten($clr-primary, 20%);
+$clr-primary-dark: darken($clr-primary, 20%);
 
-  // Navigation Variables
-  $nav-height: 60px;
-  $nav-bg    : $clr-primary;
-  $nav-text  : $clr-white;
-  $nav-hover : $clr-accent;
+$clr-accent : $clr-red;
+
+$bg-light  : $clr-white;
+$bg-dark   : $clr-black;
+$text-light: $clr-white;
+$text-dark : $clr-black;
+
+$br: 4px; // border-radius
+$nav-height: 60px; //navigation height
 
   // Layout Variables
   $max-container-width: 1200px;
@@ -58,131 +41,3 @@
   serif;
   $ff-sans: 'Open Sans',
   sans-serif;
-
-  // Set the $nav-color to transparent if don't want a background color.
-  $nav-bg        : $clr-primary;
-  $nav-bg-opacity: 0;
-  $nav-text      : $clr-white;
-  $nav-accent    : $clr-accent;
-  $nav-height    : 60px;
-  $scale         : 0; // Scales the navigation. valid #'s 0 -> 1. Zero value is collapsed.
-
-
-
-
-  $nav-height: 120px;
-  $scale     : 0;
-  $breakpoint: 768px;
-
-  // Font Weights
-  $fw-l: 300;
-  $fw-n: 400;
-  $fw-b: 600;
-  $fw-s: 900;
-
-  // Font Families
-
-  $ff-serif: serif;
-  $ff-sans : 'Poppins',
-  sans-serif;
-
-  // Media Queries
-
-  $mq-sm: 576px;
-  $mq-md: 768px;
-  $mq-lg: 991px;
-  $mq-xl: 1200px;
-
-  /* 
-      CSS VARIABLES 
- 
-      DO NOT CHANGE THE VARIABLE NAME INSIDE OF THE :ROOT.
-      IF YOU ARE USING SASS, CHANGE THE PROPERTY IN THE _THEME.SCSS
-      PARTIAL FILE.
- 
-      IF YOU ARE USING CSS ONLY, CHANGE THE PROPERTY OF THE VARIABLE 
-      INSIDE THE MAIN.CSS AND LOGIN.CSS FILES.
- 
-      THE -RGB IS THE RED/GREEN/BLUE IDENTIFIER OF THE COLOR IT
-      REPRESENTS. THIS IS USED FOR COLORS THAT USE AN ALPHA CHANNEL.
-      IF YOU UPDATE A BASE COLOR, YOU SHOULD ALSO FIND THE RGB VALUE AND REPLACE
-      THE 3 NUMBERS. THERE ARE TOOLS IN CODE EDITORS FOR THIS, OR IT IS EASILY
-      GOOGLED.
- 
-      IE 
- 
-      --CLR-PRIMARY: #336699; // == RGB(51, 102, 153)
-      --CLR-PRIMARY-RGB: 51,102,153;
- 
-  */
-
-  /* Color Theme */
-  /* Color base */
-  /* Color RGB Components */
-  :root {
-
-    --clr-primary     : #{$clr-primary};
-    --clr-primary-rgb : #{hexToRGB($clr-primary)};
-
-    --clr-primary-dark     : #{$clr-primary-dark};
-    --clr-primary-dark-rgb : #{hexToRGB($clr-primary-dark)};
-
-    --clr-primary-light    : #{$clr-primary-light};
-    --clr-primary-light-rgb: #{hexToRGB($clr-primary-light)};
-
-    --clr-secondary     : #{$clr-secondary};
-    --clr-secondary-rgb : #{hexToRGB($clr-secondary)};
-
-    --clr-accent     : #{$clr-accent};
-    --clr-accent-rgb : #{hexToRGB($clr-accent)};
-
-    --clr-dark-text     : #{$clr-dark-text};
-    --clr-dark-text-rgb : #{hexToRGB($clr-dark-text)};
-
-    --clr-white     : #{$clr-white};
-    --clr-white-rgb : #{hexToRGB($clr-white)};
-
-    --clr-black     : #{$clr-black};
-    --clr-black-rgb : #{hexToRGB($clr-black)};
-
-    --clr-grey-dark     : #{$clr-grey-dark};
-    --clr-grey-dark-rgb : #{hexToRGB($clr-grey-dark)};
-
-    --clr-grey-medium     : #{$clr-grey-medium};
-    --clr-grey-medium-rgb : #{hexToRGB($clr-grey-medium)};
-
-    --clr-grey-light     : #{$clr-grey-light};
-    --clr-grey-light-rgb : #{hexToRGB($clr-grey-light)};
-
-    /* Default Element Styles */
-    --bs            : #{$bs}; // Box Shadow    
-    --bs-1          : #{$bs-1}; // Box Shadow 1 
-    --bs-2          : #{$bs-2}; // Box Shadow 1 
-    --bsh           : #{$bsh}; // Box Shadow Hover
-    --br            : #{$br}; // Border Radius 
-    --ls            : #{$ls}; // Letter spacing 
-    --ts            : #{$ts}; // Text Shadow 
-    --section-margin: #{$section-margin}; // Spacing between sections
-
-    /*  Navigation Styles */
-    --nav-height    : #{$nav-height};
-    --nav-bg        : #{$nav-bg};
-    --nav-bg-opacity: #{$nav-bg-opacity};
-    --nav-text      : #{$nav-text};
-    --nav-hover     : #{$nav-hover};
-    --nav-accent    : #{$nav-accent};
-    /* Layout Variables */
-    --max-width     : #{$max-container-width};
-
-    /* Media Queries */
-    --breakpoint: #{$breakpoint};
-    /* Font Families */
-    --ff-serif  : #{$ff-serif};
-    --ff-sans   : #{$ff-sans};
-
-    /* Font Weights */
-    --fw-l: #{$fw-l}; //Fontweight light
-    --fw-n: #{$fw-n}; //Fontweight normal
-    --fw-m: #{$fw-m}; //Fontweight medium
-    --fw-b: #{$fw-b}; //Fontweight bold
-  }
